Scrollbar repositioning fixed

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,10 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.5/dist/web/variable/pretendardvariable.css");
 
+// 2022.11.09 SCROLLBAR REPOSITIONING SOLUTION.
+html {
+  margin-right: calc(-1 * (100vw - 100%));
+}
+
 body {
   font-family: "Pretendard Variable";
 }
